objects/TierAssessmentMember__c.object
<CustomObject>
    <fields>
        <fullName>AggregateTransactionAmountTillDate__c</fullName>
        <label>Aggregate Transaction Amount Till Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssessmentType__c</fullName>
        <label>Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade Tier</fullName>
                </value>
                <value>
                    <fullName>Expire Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandingPercentage__c</fullName>
        <label>Branding Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LoyaltyProgramMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loyalty Program Member</label>
        <referenceTo>LoyaltyProgramMember</referenceTo>
        <relationshipLabel>Tier Assessment Members</relationshipLabel>
        <relationshipName>TierAssessmentMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnershipYears__c</fullName>
        <label>Partnership Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuarterlyConferenceAttended__c</fullName>
        <label>Quarterly Conference Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamTrainedPercentage__c</fullName>
        <label>Team Trained Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TierExpirationDate__c</fullName>
        <label>Tier Expiration Date</label>
        <type>Date</type>
    </fields>
    <label>Tier Assessment Member</label>
    <listViews>
        <fullName>All_Tier_Assessment_Member</fullName>
        <columns>NAME</columns>
        <columns>LoyaltyProgramMember__c</columns>
        <columns>AggregateTransactionAmountTillDate__c</columns>
        <columns>BrandingPercentage__c</columns>
        <columns>QuarterlyConferenceAttended__c</columns>
        <columns>TeamTrainedPercentage__c</columns>
        <columns>PartnershipYears__c</columns>
        <columns>Status__c</columns>
        <columns>AssessmentType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tier Assessment Member</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tier Assessment Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>